fixing homepage promotions product images overflow

--- a/frontend/src/components/HomePageComponents/Promotions/index.css
+++ b/frontend/src/components/HomePageComponents/Promotions/index.css
@@ -18,15 +18,18 @@
     margin: 0;
 }
 
-.homepage-promotions-section > h2{
+.homepage-promotions-section > a{
     color: #DD759B;
     font-family: "Poppins-Regular";
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 500;
     letter-spacing: 2.5px;
     text-align: center;
     margin: 0;
     margin-bottom: 30px;
+}
+.homepage-promotions-section > a h2{
+    margin: 0;
 }
 
 .homepage-promotions-section .cards-container{
@@ -81,6 +84,7 @@
 @media (max-width: 550px){
     .homepage-promotions-section .cards-container{
         grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+        justify-content: center;
         height: auto;
         min-height: 250px;
         gap: 10px;
